Fixes z-index issue in header causing chopped of text@

--- a/Production/wp-content/themes/lobban/src/sass/_global.scss
+++ b/Production/wp-content/themes/lobban/src/sass/_global.scss
@@ -23,7 +23,7 @@ main {
     .edge {
 	background: #fff;
 	position: fixed;
-	z-index: 9999;
+	z-index: 9998;
 	}
 
 	.edge--top {
